# TulaHack

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
Secret weapon/: .gitignore  bot.env  pyproject.toml
Secret weapon/app/: __main__.py  app.dockerfile
Secret weapon/app/src/params/: auth.py  config.py
Secret weapon/app/src/schemas/: general_schemas.py
Secret weapon/app/src/services/: general_service.py  user_service.py
Secret weapon/app/src/services/api/: general_api.py
Secret weapon/nginx/: server.conf
app/: app.dockerfile  requirements.txt
app/src/database/: db.py  general_db.py  user_db.py
app/src/database/models/: base.py  models.py  user_plants.py
app/src/routers/: auth_router.py  general_router.py  user_router.py
app/src/schemas/: plant_schemas.py  section_schemas.py  user_schemas.py
app/src/services/: auth_utils.py  general_service.py
app/src/services/api/: default_api.py  temp_api.py
app/src/services/ds/: catboost_model_fertilization  catboost_model_spraying  catboost_model_watering  scratch.py
front/: package-lock.json  package.json
front/src/: App.jsx  api.js  constants.js  index.css  main.jsx  routes.js
front/src/components/account/: index.jsx
front/src/components/addPlant/: index.jsx  index.module.css
front/src/components/appRouter/: index.jsx
front/src/components/authComponent/: index.jsx  index.module.css
front/src/components/calendar/: index.jsx
front/src/components/carousel/: index.jsx  index.module.css
front/src/store/: userStore.js
nginx/: server.conf
(+17 files in other folders)
