[tool.poetry]
name = "secret weapon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "0.21.1"
bcrypt = "4.0.1"
sqlalchemy = "2.0.10"
asyncpg = "0.27.0"
python-jose = "3.3.0"
passlib = "1.7.4"
python-multipart = "0.0.6"
psycopg2-binary = "2.9.5"
requests = "2.31.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
